# wubi

./: .editorconfig  README.md  package.json
src/: App.tsx
src/components/: index.ts
src/components/Descriptions/: index.tsx
src/components/KeyBoard/: index.module.scss  index.tsx
src/constants/: common.ts
src/hooks/: index.ts  useKeysData.ts  useKeysFive.ts  useKeysFour.ts  useKeysOne.ts  useKeysThree.ts  useKeysTwo.ts
src/types/: index.ts
src/utils/: index.ts  wordRoots.ts
trans_word_root/: .gitignore  Cargo.toml  word_roots.json
trans_word_root/src/: main.rs
新世纪五笔字根图-v1.1/: components.txt  readme.txt
新世纪五笔字根图-v1.1/wmwb06-font/: wmwb06.html
