[package]
name = "trans_word_root"
version = "0.1.0"
authors = ["子十 <aqrun@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
visdom = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
